# ET-Hackathon

./: .gitignore  Product Development  Document.txt  create_fallback_audio.py  create_fallback_storyboard.py  fix_render.py  imghdr.py  main.py  pyproject.toml  requirements.txt  simple_fix_render.py  test_api_config.py  test_groq_api.py  update_assets_registry.py
.claude/: settings.local.json
Implementation Steps/: Step 1 - Foundation and Initial Plan.txt  Step 2 - LLM Planning and Storyboard Engine.txt  Step 3 - Asset Pipeline plus Voiceover and Subtitles.txt  Step 4 - Blender Composition and Final Render.txt  Step 5 - Hardening, Review Flow, and Production Readiness.txt
blender/: templates_base.blend
blender_templates/: base_templates.blend  base_templates_45.blend  create_templates.py  create_templates_45.py  ffmpeg_probe.py  ffmpeg_probe2.py  ffmpeg_probe_lts.py
fixtures/: golden_article.txt
src/: cli.py
src/assets/: pipeline.py
src/audio/: pipeline.py
src/common/: config.py  constants.py  errors.py  models.py  retry.py  text_utils.py  validation.py
src/ingest/: stage0.py
src/observability/: json_logger.py
src/planner/: engine.py
src/postprocess/: exporter.py
src/renderer/: pipeline.py
src/storage/: repository.py
web/: package-lock.json  package.json
web/.next/: trace
web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  (+1 more)
web/app/: globals.css  layout.js  page.js
web/lib/: jobStore.js
web/scripts/: run_pipeline.js
(+17 files in other folders)
